--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@vitejs/plugin-react": "^4.3.4",
     "typescript": "^5.6.2",
     "vite": "^6.0.3",
-    "tailwindcss": "^4.0.0",
-    "postcss": "^8.4.49"
+    "@tailwindcss/vite": "^4.0.0"
   }
 }
